--- a/Sample_Testing/WebXR-main/index.html
+++ b/Sample_Testing/WebXR-main/index.html
@@ -16,6 +16,7 @@
 
 			import * as THREE from './build/three.module.js';
 			import { ARButton } from './jsm/webxr/ARButton.js';
+			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
 
 			let container;
 			let camera, scene, renderer;
@@ -62,11 +63,19 @@
 
 					if ( reticle.visible ) {
 
-						const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
-						const mesh = new THREE.Mesh( geometry, material );
-						mesh.position.setFromMatrixPosition( reticle.matrix );
-						mesh.scale.y = Math.random() * 2 + 1;
-						scene.add( mesh );
+						// const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
+						// const mesh = new THREE.Mesh( geometry, material );
+						// mesh.position.setFromMatrixPosition( reticle.matrix );
+						// mesh.scale.y = Math.random() * 2 + 1;
+						// scene.add( mesh );
+						const loader = new GLTFLoader();
+						loader.load('./3D_Model/Jenga.glb', function ( gltf ){
+							model = gltf.scene.childrem[0];
+							model.position.setFromMatrixPosition( reticle.matrix );
+							scene.add(gltf.scene);
+						});
+
+
 
 					}
 
